--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,12 +14,13 @@
     <header>
         <div class="icon">
             <img src="icon.png">
-            <a href="/action">CyberReportShield</a>
+            <a href="">CyberReportShield</a>
         </div>
         <div class="navbar">
+            <button type="button" class="btn btn-danger" onclick="window.open('admin.html')">Admin</button>
             <button type="button" class="btn btn-danger" onclick="window.open('emergency.html')">Emergency</button>
-            <button type="button" class="btn btn-outline-light" onclick="window.open('login.html')">File New FIR</button>
-            <button type="button" class="btn btn-secondary" onclick="window.open('trackFIR.html')">Track FIR</button>
+            <button type="button" class="btn btn-danger" onclick="window.open('login.html')">File New FIR</button>
+            <button type="button" class="btn btn-danger" onclick="window.open('trackFIR.html')">Track FIR</button>
         </div>
     </header>
 
